@@ -1,5 +1,6 @@
 [master]
     - Feature: Ability to reorder the panels in the side pane
+	- Feature: Option to save selected entries as plain BibTex without JabRef metadata
 2.11 beta
     - Some UI updates (mainly removing unnecessary boundaries)
     - Feature: Gridlines are now optional (and disabled by default)
